<resources>
    <string name="app_name">Task List Management</string>

    <string name="moeys">Ministry of Education Youth and Sport</string>
    <string name="finance_department">Finance Department</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="username_nav">Moeys Staff</string>
    <string name="login_nav">Login</string>
    <string name="sign_up_nav">Sign Up</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="all_task">All task</string>
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="add_task">Add task</string>

    <string name="add_name">Name</string>
    <string name="add_responder">Responder</string>
    <string name="add_start_date">Start Date</string>
    <string name="add_end_date">End Date</string>
    <string name="add_categories">Categories</string>
    <string name="add_status">Status</string>
    <string name="add_choose_file">Choose File</string>
    <string name="add_description">Description</string>
</resources>
