<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottom_nav_all_task"
        android:icon="@drawable/ic_menu_camera"
        android:title="@string/all_task" />
    <item
        android:id="@+id/bottom_nav_yesterday"
        android:icon="@drawable/ic_menu_gallery"
        android:title="@string/yesterday" />
    <item
        android:id="@+id/bottom_nav_todaytask"
        android:icon="@drawable/ic_menu_slideshow"
        android:title="@string/today" />
    <item
        android:id="@+id/bottom_nav_tom_task"
        android:icon="@drawable/ic_menu_slideshow"
        android:title="@string/tomorrow" />
    <item
        android:id="@+id/bottom_nav_addtask"
        android:icon="@drawable/ic_add_circle_outline_black_24dp"
        android:title="@string/add_task" />
</menu>