<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/colorPrimaryDark"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/nav_logo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:src="@drawable/moeys_logo" />

    <TextView
        android:id="@+id/nav_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:layout_below="@id/nav_logo"
        android:text="@string/username_nav"
        android:textColor="@color/colorWhite"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/nav_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_nav"
        android:layout_marginTop="25dp"
        android:textColor="@color/colorWhite"
        android:layout_below="@id/nav_username"/>

    <TextView
        android:id="@+id/nav_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nav_username"
        android:layout_marginLeft="295dp"
        android:layout_marginTop="25dp"
        android:layout_toRightOf="@id/nav_login"
        android:text="@string/sign_up_nav"
        android:textColor="@color/colorWhite" />

</RelativeLayout>
